No more codemirror ld-json, fixed sidebar footer css overflow, added bracket closing

--- a/app/ui/css/components/sidebar.less
+++ b/app/ui/css/components/sidebar.less
@@ -354,10 +354,13 @@
   .sidebar__footer {
     height: @line-height-xs;
     border-top: 1px solid @hl-md;
+    width: 100%;
+    overflow: hidden;
   }
 
   .sidebar__footer > button,
   .sidebar__footer .dropdown > button {
+    background: red;
     font-size: @font-size-sm;
     padding: @padding-xs @padding-md;
     height: 100%;
